--- a/.gitignore
+++ b/.gitignore
@@ -136,8 +136,6 @@ fabric.properties
 # Ignores the whole .idea folder and all .iml files
 # See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
 
-.idea/
-
 # Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
 
 *.iml
@@ -174,3 +172,13 @@ modules.xml
 hs_err_pid*
 
 # End of https://www.gitignore.io/api/java,intellij,intellij+all
+
+
+# Custom
+
+!.idea/libraries/
+!.idea/libraries/*.xml
+
+!lib/*.jar
+
+vcs.xml
